[package]
name = "samko_hpdso22_stockholm_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-csv = "0.1.6"
kd-tree = "0.4.2"
typenum = "1.15.0"
der-parser = "8.1"
kodama = "0.2.3"
num-traits = "0.2.15"
clap = { version = "4.0.18", features = ["derive"] }
